--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,7 @@
 	"forwardPorts": [5050],
 
 	// Uncomment the next line to run commands after the container is created - for example installing curl.
-    // "postCreateCommand": "kepler_build local.restore --clean",
+    // "postCreateCommand": "",
 	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
 	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 
@@ -49,9 +49,5 @@
 	// "remoteUser": "root"
 	"runArgs": [
 		"--net=host"
-    ],
-    "containerEnv": {
-        "KEPLER_SRC": "${containerWorkspaceFolder}/src",
-        "PLOTLY_RENDERER": "notebook"
-    }
+    ]
 }
