--- a/src/jupyrest/pyproject.toml
+++ b/src/jupyrest/pyproject.toml
@@ -6,22 +6,24 @@ authors = ["Koushik Krishnan <kokrishn@microsoft.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.12"
-jsonschema = "^3.2.0"
-nbformat = "^5.1.3"
-nbclient = "^0.5.1"
-entrypoints = "^0.3"
+jsonschema = "^4.21.1"
+nbformat = "^5.10.3"
+nbclient = "^0.10.0"
+entrypoints = "^0.4"
 scrapbook = "^0.5.0"
-pydantic = "^1.8"
-fastapi = "^0.65.2"
-# textwrap3 = "^0.9.2"
-uvicorn = "^0.14.0"
-ipython = "^7.25.0"
-ipykernel = "^6.0.1"
-nbconvert = "^7.2.10"
+pydantic = "^2.6.4"
+fastapi = "^0.110.0"
+uvicorn = "^0.29.0"
+ipykernel = "^6.29.3"
+nbconvert = "^7.16.3"
 anyio = "^4.3.0"
 aiohttp = "^3.9.3"
 papermill = "^2.5.0"
 aiofiles = "^23.2.1"
+ipython = [
+    { version = ">=8.18.1,<8.19.0", python = ">=3.9,<3.10" },
+    { version = ">=8.19.0", python = ">=3.10" }
+]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^6.0"
