--- a/src/jupyrest_example/pyproject.toml
+++ b/src/jupyrest_example/pyproject.toml
@@ -9,7 +9,7 @@ python = ">=3.9,<3.12"
 pandas = "^1.3"
 numpy = "^1.21"
 matplotlib = "^3.5"
-jupyrest = {path = "../jupyrest"}
+jupyrest = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
