--- a/src/jupyrest_example/pyproject.toml
+++ b/src/jupyrest_example/pyproject.toml
@@ -14,11 +14,10 @@ jupyrest = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 notebook = "^7.1.2"
+jupytext = "^1.16.1"
+pre-commit = "^3.7.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.plugins."jupyrest.plugins"]
-"default" = "jupyrest_example:plugin"
