--- a/src/jupyrest_example/pyproject.toml
+++ b/src/jupyrest_example/pyproject.toml
@@ -5,11 +5,13 @@ authors = ["John Smith <john@example.com>"]
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
-pandas = "^1.3"
+python = ">=3.10,<3.14"
+# pandas = "^1.3"
 numpy = "^1.21"
 matplotlib = "^3.5"
-jupyrest = "^0.2.0"
+# jupyrest = "^0.2.0"
+pandas = "^2.3.0"
+jupyrest = {path = "../jupyrest"}
 
 
 [tool.poetry.group.dev.dependencies]
